# Paper-Scissors-Rock-game

./: CMakeLists.txt  README.md
include/: ComputerPlayer.hpp  Game.hpp  Hands.hpp  HumanPlayer.hpp  Player.hpp  PlayersFactory.hpp  Rules.hpp  RulesFactory.hpp
src/: ComputerPlayer.cpp  Game.cpp  HumanPlayer.cpp  PlayersFactory.cpp  Rules.cpp  RulesFactory.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: PaperScissorsRocktTests.cpp
